<resources>
    <string name="app_name">Ejercicio1</string>

    <string name="edt_main_masa">Masa</string>
    <string name="edt_main_altura">Altura</string>
    <string name="btn_main_calcular">Calcular</string>

    <string name="tv_main_introduce">Introduce los datos para calcular tu IMC</string>
    <string name="tv_main_resultado">Tu IMC es:</string>
    <string name="tv_main_result"> </string>

</resources>
